--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <!-- HEADER - JULIO  -->
@@ -40,26 +41,16 @@
       <!-- DIFERENTES SECCIONES - JORGE/ALICIA -->
       <!-- DIFERENTES SECCIONES - ALICIA -->
       <section id="sobreMi">
-
-        <h1>Sobre Mi</h1>
-
+        <div id="SM_text">
+          <h1>FOTOGRAFO INTIMISTA</h1>
+        </div>
+        
+        <h2 class="fade-in" >EXPRESIÓN</h2>
+        <h3 class="fade-in">ALMA</h2>
+        <h4 class="fade-in">LUZ</h2>
 
         <div id="SM_foto"></div> 
       
-
-        <div id="SM_text">
-          <div id="SMT_filtro"></div>
-          <p>
-            Hola, soy Manuel, un fotógrafo especializado en retratos intimistas de personas y animales. 
-            Mi trabajo se centra en capturar la esencia más genuina y profunda de mis sujetos, 
-            explorando la conexión entre la luz, la expresión y el alma. 
-            Me esfuerzo por crear imágenes que transmitan emociones y cuenten historias personales, 
-            donde cada mirada y gesto revele algo único y auténtico. Si estás buscando algo más que una simple imagen, 
-            y quieres capturar la verdadera esencia de un momento o de alguien especial, 
-            me encantaría colaborar contigo y crear recuerdos visuales que perduren en el tiempo.
-          </p>
-        </div>
-        <hr>
       </section>
     </main>
 
